// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should render correctly with children 1`] = `
<header>
  <nav
    className="sc-eDLJxc hgRpWf"
  >
    <div
      className="sc-dmyDGi sc-jTQDnj KaICR ecPkEr"
    >
      <div>
        This
      </div>
      <div>
        is
      </div>
      <div>
        cool
      </div>
    </div>
  </nav>
</header>
`;

exports[`Header component should render correctly without children 1`] = `
<header>
  <nav
    className="sc-eDLJxc hgRpWf"
  >
    <div
      className="sc-dmyDGi sc-jTQDnj KaICR ecPkEr"
    />
  </nav>
</header>
`;
